feat: app支持单独启动

--- a/template/index.html
+++ b/template/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title></title>
+  <style>
+    #app, .night-kay-app {
+      height: 100%;
+    }
+    #app {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 10px 0;
+    }
+  </style>
 </head>
 <body>
   <div id="app"></div>
+  <script src="vendor.js"></script>
+  <script>
+    window.APP_ENTRY = {
+      app: 'main.js'
+    }
+  </script>
+  <script src="index.js"></script>
 </body>
 </html>
